MB-11276: Fix issue when backfill was not properly being scheduled

Sometimes we only need to backfill a single item and the current
code was not allowing us to do that. Note that the backfillEnd
variable should be initialized to 0. This way we will not do
backfill by default (since backfillStart and backfillEnd are
initially set to the same value.

Change-Id: Ia7c1c68f370ca2f9bd2c3f97386c37e07a640bcb
Reviewed-on: http://review.couchbase.org/37739
Reviewed-by: Sundararaman Sridharan <sundar@couchbase.com>
Tested-by: Sundararaman Sridharan <sundar@couchbase.com>
Reviewed-by: Chiyoung Seo <chiyoung@couchbase.com>